# gamified-learning-platform

./: .gitignore  CHANGELOG.md  Cargo.toml  LLM-BUILD-PLAN.md  PHASE-1-IMPLEMENTATION-PLAN.md  PHASE-2-IMPLEMENTATION-PLAN.md  PHASE-2-TESTING-STRATEGY.md  PHASE-3-IMPLEMENTATION-PLAN.md  PHASE-4-IMPLEMENTATION-PLAN.md  PHASE-6-IMPLEMENTATION-PLAN.md  PHASE-6-TESTING-STRATEGY.md  PHASE-7-TESTING-STRATEGY.md  PHASE_0_COMPLETE.md  SHRINK.md  WARP.md  lecture-generator.md  package-lock.json  package.json  preproject-quiz-challenge-generator.md  project-outline-template.md  syllabus_updated.md  talktrack-interview.md  task-generator.md
.claude/commands/: commit.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
apps/desktop/: README.md  index.html  package-lock.json  (+4 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs  state.rs
apps/desktop/src-tauri/src/commands/: badge.rs  content.rs  curriculum.rs  lecture.rs  mod.rs  progress.rs  quiz.rs  review.rs  session.rs  system.rs  update.rs  user.rs
content/: manifest.json
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/badges/: definitions.rs  mod.rs  tracker.rs
crates/core/src/db/: connection.rs  error.rs  migrations.rs  mod.rs  schema.sql
crates/core/src/db/repos/: badge_repo.rs  curriculum_repo.rs  mastery_repo.rs  mod.rs  progress_repo.rs  quiz_repo.rs  review_repo.rs  session_repo.rs  user_repo.rs
crates/core/src/gamification/: formulas.rs  mod.rs  quiz_grading.rs  streak.rs
crates/core/src/models/: artifact.rs  badge.rs  challenge.rs  curriculum.rs  mastery.rs  mod.rs  progress.rs  quiz.rs  review.rs  session.rs  user.rs
crates/core/src/spaced_repetition/: mod.rs  scheduler.rs
crates/core/tests/: phase4_gamification_tests.rs  phase5_curriculum_tests.rs  phase6_integration_tests.rs
crates/grader/: Cargo.toml
crates/grader/src/: cache.rs  error.rs  lib.rs  llm.rs  rubrics.rs  types.rs
crates/runner/: Cargo.toml
crates/runner/src/: docker.rs  error.rs  lib.rs  parser.rs  pool.rs  types.rs
docs/: CONTENT_SCHEMA.md
scripts/: build-release.sh  bump-version.sh
(+123 files in other folders)
