[package]
name = "glp_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
rusqlite.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile = "3.10"
content = { path = "../content" }
