[package]
name = "glp_grader"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
rusqlite.workspace = true
sha2.workspace = true

# OpenAI client
async-openai = "0.18"
tokio = { version = "1", features = ["full"] }

# Async utilities
futures = "0.3"

[dev-dependencies]
tempfile = "3.10"
tokio-test = "0.4"
