[package]
name = "glp_runner"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true

# Docker client
bollard = "0.16"
tokio = { version = "1", features = ["full"] }

# Async utilities
futures = "0.3"

# Temp file management
tempfile = "3.10"

[dev-dependencies]
tokio-test = "0.4"
