[package]
name = "gamified-learning-platform"
version = "0.1.0"
description = "A gamified Rust learning platform"
authors = ["Aaron"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glp_core = { path = "../../../crates/core" }
content = { path = "../../../crates/content" }
uuid = { version = "1.6", features = ["v4"] }
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
